--- a/docs/modules/ROOT/pages/contributor-guide/release-guide.adoc
+++ b/docs/modules/ROOT/pages/contributor-guide/release-guide.adoc
@@ -92,14 +92,14 @@ It's important that the machine running the `perf-regression` tool be equally lo
 The simplest way would be to take a 1 hour slot at the end of the day, launch the tool on your main station and then lock the screen.
 
 At this stage, one is probably working from the release branch.
-From there, a full `mvn clean install -Dquickly` rebuild is needed prior to running the performance regression tool.
-It could be simpler to switch to the main branch, where no rebuild should be needed.
+The performance regression tool might be present in the `target/checkout` folder.
+Otherwise a full `mvn clean install -Dquickly` rebuild is needed prior to running the performance regression tool.
+Another option is to switch to the main branch, where no rebuild should be needed.
 
 For instance, running the tool to compare the `2.10.0` staging release against the `2.9.0` previous release would look as below:
 
 [source,shell]
 ----
-$ cd tooling/perf-regression
 $ java -jar target/quarkus-app/quarkus-run.jar -an 2.9.0 2.10.0
 ----
 
