--- a/docs/modules/ROOT/pages/contributor-guide/release-guide.adoc
+++ b/docs/modules/ROOT/pages/contributor-guide/release-guide.adoc
@@ -364,9 +364,13 @@ Check the full [release announcement](https://camel.apache.org/blog/2021/06/came
 
 == Update the project changelog
 
-Create a new release heading in `changelog.md`. E.g `== 3.2.0`. Under there, you can copy & paste the generated release notes markdown (see previous step) from the GitHub release page into `changelog.md`.
+In the Camel Quarkus main branch, create a new release heading in the `CHANGELOG.md` file. E.g `## 3.2.0`.
+Under there, you can copy & paste the generated release notes markdown (see previous step) from the GitHub release page into `CHANGELOG.md`.
 
-You may want to clean up the markdown and remove the `What's Changed` heading and fix up any abbreviated lines that end in `...`.
+You may also want to clean up the markdown, for instance:
+
+* Remove any excess sections like the `What's Changed` heading
+* Fix up any abbreviated lines that end in `...`
 
 == Upgrade and tag Examples
 
