Upgrade Camel to 4.5.0

--- a/docs/modules/ROOT/pages/reference/extensions/telegram.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/telegram.adoc
@@ -8,7 +8,7 @@
 :cq-native-supported: true
 :cq-status: Stable
 :cq-status-deprecation: Stable
-:cq-description: Send and receive messages acting as a Telegram Bot Telegram Bot API.
+:cq-description: Send and receive messages using the Telegram Bot API.
 :cq-deprecated: false
 :cq-jvm-since: 1.0.0
 :cq-native-since: 1.0.0
@@ -18,7 +18,7 @@ ifeval::[{doc-show-badges} == true]
 [.badge-key]##JVM since##[.badge-supported]##1.0.0## [.badge-key]##Native since##[.badge-supported]##1.0.0##
 endif::[]
 
-Send and receive messages acting as a Telegram Bot Telegram Bot API.
+Send and receive messages using the Telegram Bot API.
 
 [id="extensions-telegram-whats-inside"]
 == What's inside
