--- a/docs/modules/ROOT/pages/reference/extensions/azure-storage-datalake.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/azure-storage-datalake.adoc
@@ -22,7 +22,7 @@ Camel Azure Datalake Gen2 Component
 [id="extensions-azure-storage-datalake-whats-inside"]
 == What's inside
 
-* xref:{cq-camel-components}::azure-storage-datalake-component.adoc[Azure Storage Datalake Service component], URI syntax: `azure-storage-datalake:accountName/fileSystemName`
+* xref:{cq-camel-components}::azure-storage-datalake-component.adoc[Azure Storage Data Lake Service component], URI syntax: `azure-storage-datalake:accountName/fileSystemName`
 
 Please refer to the above link for usage and configuration details.
 
