--- a/docs/modules/ROOT/pages/reference/extensions/wordpress.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/wordpress.adoc
@@ -22,7 +22,7 @@ Manage posts and users using Wordpress API.
 [id="extensions-wordpress-whats-inside"]
 == What's inside
 
-* xref:{cq-camel-components}::wordpress-component.adoc[Wordpress component], URI syntax: `wordpress:operation`
+* xref:{cq-camel-components}::wordpress-component.adoc[WordPress component], URI syntax: `wordpress:operation`
 
 Please refer to the above link for usage and configuration details.
 
