Fix typo in servlet name configuration code snippet

--- a/extensions/servlet/runtime/src/main/doc/usage.adoc
+++ b/extensions/servlet/runtime/src/main/doc/usage.adoc
@@ -30,7 +30,7 @@ To give a specific name to the Servlet you can use the `quarkus.camel.servlet.se
 
 [source,properties]
 ----
-quarkus.camel.servlet.url-patterns = My Custom Name
+quarkus.camel.servlet.servlet-name = My Custom Name
 ----
 
 *Servlet class*
