--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -86,7 +86,6 @@
 *** xref:reference/extensions/chunk.adoc[Chunk]
 *** xref:reference/extensions/core-cloud.adoc[Cloud]
 *** xref:reference/extensions/cloudevents.adoc[Cloudevents]
-*** xref:reference/extensions/kubernetes-cluster-service.adoc[Cluster Service]
 *** xref:reference/extensions/coap.adoc[CoAP]
 *** xref:reference/extensions/cometd.adoc[CometD]
 *** xref:reference/extensions/console.adoc[Console]
@@ -122,6 +121,7 @@
 *** xref:reference/extensions/fop.adoc[FOP]
 *** xref:reference/extensions/ftp.adoc[FTP]
 *** xref:reference/extensions/file.adoc[File]
+*** xref:reference/extensions/file-cluster-service.adoc[File Cluster Service]
 *** xref:reference/extensions/file-watch.adoc[File Watch]
 *** xref:reference/extensions/flatpack.adoc[Flatpack]
 *** xref:reference/extensions/flink.adoc[Flink]
@@ -191,6 +191,7 @@
 *** xref:reference/extensions/kotlin.adoc[Kotlin]
 *** xref:reference/extensions/kotlin-dsl.adoc[Kotlin DSL]
 *** xref:reference/extensions/kubernetes.adoc[Kubernetes]
+*** xref:reference/extensions/kubernetes-cluster-service.adoc[Kubernetes Cluster Service]
 *** xref:reference/extensions/kudu.adoc[Kudu]
 *** xref:reference/extensions/ldap.adoc[LDAP]
 *** xref:reference/extensions/ldif.adoc[LDIF]
