JT400: Use better name of workspace in the readme.adoc

--- a/integration-tests/jt400/README.adoc
+++ b/integration-tests/jt400/README.adoc
@@ -31,13 +31,13 @@ Execution of mocked tests can be skipped by setting property `skip-mock-tests` t
 
 Several objects (queues, user spaces, ..) have to be created in the external server to make testing successful.
 
-The suggested approach is to create a test library. In the following text, the test library's name is `REDHAT5`
+The suggested approach is to create a test library. In the following text, the test library's name is `LIBRARY`
 
 Download i-access client solutions from this https://www.ibm.com/support/pages/ibm-i-access-client-solutions[page].
 Use the 5250 emulator option from the client and run the following command for library creation:
 
 ```
-CRTLIB REDHAT5
+CRTLIB LIBRARY
 ```
 
 ==== Program call testing
@@ -49,13 +49,13 @@ Program call test reads the content of user space.
 CALL QCMD
 
 //creation of PROGCALL user space
-CALL PGM(QSYS/QUSCRTUS) PARM(('PROGCALL  REDHAT5   ' (*CHAR 20))
+CALL PGM(QSYS/QUSCRTUS) PARM(('PROGCALL  LIBRARY   ' (*CHAR 20))
         ('TEST      ' (*CHAR 10)) (16 (*INT 4))
         (' ' (*CHAR 1)) ('*ALL      ' (*CHAR 10))
         ('                ' (*CHAR 16)))
 
 //value is set to hello camel
-CALL PGM(QSYS/QUSCHGUS) PARM(('PROGCALL  REDHAT5   ' (*CHAR 20))
+CALL PGM(QSYS/QUSCHGUS) PARM(('PROGCALL  LIBRARY   ' (*CHAR 20))
         (1 (*INT 4)) (16 (*INT 4))
         ('hello camel     ' (*CHAR 16))
         ('1' (*CHAR 1))  )
@@ -66,7 +66,7 @@ CALL PGM(QSYS/QUSCHGUS) PARM(('PROGCALL  REDHAT5   ' (*CHAR 20))
 Message queue can be created by following the command
 
 ```
-CRTMSGQ REDHAT5/TESTMSGQ
+CRTMSGQ LIBRARY/TESTMSGQ
 ```
 
 ==== Data queue testing
@@ -75,10 +75,10 @@ Two data-queues are required for the testing. One created as `keyed=true` and on
 
 ```
 //keyed data queue
-CRTDTAQ DTAQ(REDHAT5/TESTKEYED) SEQ(*KEYED) KEYLEN(20) MAXLEN(100)
+CRTDTAQ DTAQ(LIBRARY/TESTKEYED) SEQ(*KEYED) KEYLEN(20) MAXLEN(100)
 
 //LIFO data queue
-CRTDTAQ DTAQ(REDHAT5/TESTLIFO) SEQ(*LIFO) MAXLEN(100)
+CRTDTAQ DTAQ(LIBRARY/TESTLIFO) SEQ(*LIFO) MAXLEN(100)
 ```
 
 ==== Using different object names
@@ -86,7 +86,7 @@ CRTDTAQ DTAQ(REDHAT5/TESTLIFO) SEQ(*LIFO) MAXLEN(100)
 If your test object names are different from the default ones, you can override default values via environmental variable
 
 ```
-export JT400_LIBRARY=#library_if_not_REDHA5
+export JT400_LIBRARY=#library_if_not_LIBRARY
 export JT400_LIFO_QUEUE=#lifoqueue_if_not_TESTLIFO.DTAQ
 export JT400_KEYED_QUEUE=#lkeyedqueue_if_not_TESTKEYED.DTAQ
 export JT400_MESSAGE_QUEUE=#messagequeue_if_not_TESTMSGQ.MSGQ
@@ -96,7 +96,7 @@ export JT400_USER_SPACE=#userspace_if_not_PROGCALL
 or for Windows:
 
 ```
-$Env:JT400_LIBRARY = "#library_if_not_REDHA5"
+$Env:JT400_LIBRARY = "#library_if_not_LIBRARY"
 $Env:JT400_LIFO_QUEUE="#lifoqueue_if_not_TESTLIFO.DTAQe"
 $Env:JT400_KEYED_QUEUE="#lkeyedqueue_if_not_TESTKEYED.DTAQ"
 $Env:JT400_MESSAGE_QUEUE="#messagequeue_if_not_TESTMSGQ.MSGQe"
