--- a/docs/modules/ROOT/pages/reference/extensions/jsh-dsl.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/jsh-dsl.adoc
@@ -6,15 +6,15 @@
 :cq-artifact-id: camel-quarkus-jsh-dsl
 :cq-native-supported: true
 :cq-status: Stable
-:cq-status-deprecation: Stable
+:cq-status-deprecation: Stable Deprecated
 :cq-description: Camel DSL with JavaShell
-:cq-deprecated: false
+:cq-deprecated: true
 :cq-jvm-since: 2.16.0
 :cq-native-since: 2.16.0
 
 ifeval::[{doc-show-badges} == true]
 [.badges]
-[.badge-key]##JVM since##[.badge-supported]##2.16.0## [.badge-key]##Native since##[.badge-supported]##2.16.0##
+[.badge-key]##JVM since##[.badge-supported]##2.16.0## [.badge-key]##Native since##[.badge-supported]##2.16.0## [.badge-key]##⚠️##[.badge-unsupported]##Deprecated##
 endif::[]
 
 Camel DSL with JavaShell
