--- a/docs/modules/ROOT/pages/reference/extensions/log.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/log.adoc
@@ -8,7 +8,7 @@
 :cq-native-supported: true
 :cq-status: Stable
 :cq-status-deprecation: Stable
-:cq-description: Log messages to the underlying logging mechanism.
+:cq-description: Prints data form the routed message (such as body and headers) to the logger.
 :cq-deprecated: false
 :cq-jvm-since: 0.0.1
 :cq-native-since: 0.0.1
@@ -18,12 +18,12 @@ ifeval::[{doc-show-badges} == true]
 [.badge-key]##JVM since##[.badge-supported]##0.0.1## [.badge-key]##Native since##[.badge-supported]##0.0.1##
 endif::[]
 
-Log messages to the underlying logging mechanism.
+Prints data form the routed message (such as body and headers) to the logger.
 
 [id="extensions-log-whats-inside"]
 == What's inside
 
-* xref:{cq-camel-components}::log-component.adoc[Log component], URI syntax: `log:loggerName`
+* xref:{cq-camel-components}::log-component.adoc[Log Data component], URI syntax: `log:loggerName`
 
 Please refer to the above link for usage and configuration details.
 
