--- a/docs/modules/ROOT/pages/reference/extensions/qdrant.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/qdrant.adoc
@@ -4,17 +4,17 @@
 = Qdrant
 :linkattrs:
 :cq-artifact-id: camel-quarkus-qdrant
-:cq-native-supported: false
-:cq-status: Preview
-:cq-status-deprecation: Preview
+:cq-native-supported: true
+:cq-status: Stable
+:cq-status-deprecation: Stable
 :cq-description: Perform operations on the Qdrant Vector Database.
 :cq-deprecated: false
 :cq-jvm-since: 3.10.0
-:cq-native-since: n/a
+:cq-native-since: 3.10.0
 
 ifeval::[{doc-show-badges} == true]
 [.badges]
-[.badge-key]##JVM since##[.badge-supported]##3.10.0## [.badge-key]##Native##[.badge-unsupported]##unsupported##
+[.badge-key]##JVM since##[.badge-supported]##3.10.0## [.badge-key]##Native since##[.badge-supported]##3.10.0##
 endif::[]
 
 Perform operations on the Qdrant Vector Database.
@@ -28,6 +28,10 @@ Please refer to the above link for usage and configuration details.
 
 [id="extensions-qdrant-maven-coordinates"]
 == Maven coordinates
+
+https://{link-quarkus-code-generator}/?extension-search=camel-quarkus-qdrant[Create a new project with this extension on {link-quarkus-code-generator}, window="_blank"]
+
+Or add the coordinates to your existing project:
 
 [source,xml]
 ----
