--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -197,6 +197,7 @@
 *** xref:reference/extensions/ldif.adoc[LDIF]
 *** xref:reference/extensions/lra.adoc[LRA]
 *** xref:reference/extensions/lzf.adoc[LZF Deflate Compression]
+*** xref:reference/extensions/langchain-embeddings.adoc[LangChain4j Embeddings]
 *** xref:reference/extensions/language.adoc[Language]
 *** xref:reference/extensions/leveldb.adoc[LevelDB]
 *** xref:reference/extensions/log.adoc[Log]
