Langchain-chat extension

--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -330,6 +330,7 @@
 *** xref:reference/extensions/grpc.adoc[gRPC]
 *** xref:reference/extensions/ical.adoc[iCal]
 *** xref:reference/extensions/joor.adoc[jOOR]
+*** xref:reference/extensions/langchain-chat.adoc[langChain4j Chat]
 *** xref:reference/extensions/univocity-parsers.adoc[uniVocity CSV]// extensions: END
 ** xref:reference/components.adoc[Components]
 ** xref:reference/dataformats.adoc[Data formats]
