--- a/integration-tests/jt400/README.adoc
+++ b/integration-tests/jt400/README.adoc
@@ -111,3 +111,25 @@ $Env:JT400_MESSAGE_QUEUE="#messagequeue_if_not_TESTMSGQ.MSGQ"
 $Env:JT400_MESSAGE_REPLYTO_QUEUE="#messagequeueinquiry_if_not_REPLYMSGQ.MSGQ"
 $Env:JT400_USER_SPACE="#userspace_if_not_PROGCALL"
 ```
+
+=== Clear queues after unexpected failures
+
+If tests finishes without unexpected failure, tests are taking care of clearing the data.
+In some cases data might stay written into the real server if test fails unexpectedly.
+This state should might alter following executions.
+
+To force full clear (of each queue) can be achieved by add ing parameter
+```
+-Dcq.jt400.clear-all=true
+```
+Be aware that with `-Dcq.jt400.clear-all=true`, the tests can not successfully finish in parallel run.
+
+Usage of clear queues parameter is *strongly* suggested during development
+
+
+==== Parallel runs and locking
+
+Simple locking mechanism is implemented for the test to allow parallel executions.
+
+Whenever test is started, new entry is  written into keyed data queue `JT400_KEYED_QUEUE` with the key `cq.jt400.global-lock` and entry is removed after the run.
+Tests are able to clear this lock even if previous execution fails unexpectedly.
