--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -21,6 +21,7 @@
 ** xref:contributor-guide/extension-metadata.adoc[Extension metadata]
 ** xref:contributor-guide/extension-documentation.adoc[Extension documentation]
 ** xref:contributor-guide/extension-testing.adoc[Testing extensions]
+** xref:contributor-guide/create-new-example.adoc[Create new example]
 ** xref:contributor-guide/ci.adoc[Continuous Integration]
 ** xref:contributor-guide/release-guide.adoc[Release guide]
 * xref:reference/index.adoc[Reference]
