--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -303,6 +303,7 @@
 *** xref:reference/extensions/vertx.adoc[Vert.x]
 *** xref:reference/extensions/vertx-http.adoc[Vert.x HTTP Client]
 *** xref:reference/extensions/vertx-websocket.adoc[Vert.x WebSocket]
+*** xref:reference/extensions/wasm.adoc[Wasm]
 *** xref:reference/extensions/weather.adoc[Weather]
 *** xref:reference/extensions/web3j.adoc[Web3j Ethereum Blockchain]
 *** xref:reference/extensions/wordpress.adoc[Wordpress]
