Fix AsciiDoc attribute substitution in MapStruct and Jasypt documentation

--- a/docs/modules/ROOT/pages/reference/extensions/mapstruct.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/mapstruct.adoc
@@ -54,7 +54,7 @@ To use MapStruct, you must configure your build to use an annotation processor.
 [id="extensions-mapstruct-usage-maven"]
 ==== Maven
 
-[source,xml]
+[source,xml,subs="attributes"]
 ----
 <plugins>
     <plugin>
@@ -76,7 +76,7 @@ To use MapStruct, you must configure your build to use an annotation processor.
 [id="extensions-mapstruct-usage-gradle"]
 ==== Gradle
 
-[source,gradle]
+[source,gradle,subs="attributes"]
 ----
 dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:{mapstruct-version}'
