Revert "Fix AsciiDoc attribute substitution in MapStruct and Jasypt documentation"
This reverts commit 9be20b7862b5794df20d1f7976d24b4a7b23c3db.

--- a/extensions/mapstruct/runtime/src/main/doc/usage.adoc
+++ b/extensions/mapstruct/runtime/src/main/doc/usage.adoc
@@ -4,7 +4,7 @@ To use MapStruct, you must configure your build to use an annotation processor.
 
 ==== Maven
 
-[source,xml,subs="attributes"]
+[source,xml]
 ----
 <plugins>
     <plugin>
@@ -25,7 +25,7 @@ To use MapStruct, you must configure your build to use an annotation processor.
 
 ==== Gradle
 
-[source,gradle,subs="attributes"]
+[source,gradle]
 ----
 dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:{mapstruct-version}'
