--- a/docs/modules/ROOT/pages/reference/extensions/jasypt.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/jasypt.adoc
@@ -57,7 +57,7 @@ By default, you do not need to write custom code to configure the Camel `JasyptP
 Any Camel configuration property added to `application.properties` can be secured with Jasypt.
 To encrypt a value, there is a utility that can be run with https://www.jbang.dev/[JBang].
 
-[source,shell,subs="attributes"]
+[source]
 ----
 jbang org.apache.camel:camel-jasypt:{camel-version} -c encrypt -p secret-password -i "Some secret content"
 ----
