--- a/docs/modules/ROOT/pages/reference/extensions/file-cluster-service.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/file-cluster-service.adoc
@@ -101,10 +101,10 @@ The time to wait between attempts to try to acquire lock (defaults to 10000ms).
 | `string`
 | 
 
-|icon:lock[title=Fixed at build time] [[quarkus.camel.cluster.file.attributes]]`link:#quarkus.camel.cluster.file.attributes[quarkus.camel.cluster.file.attributes]`
+|icon:lock[title=Fixed at build time] [[quarkus.camel.cluster.file.attributes.-attributes]]`link:#quarkus.camel.cluster.file.attributes.-attributes[quarkus.camel.cluster.file.attributes."attributes"]`
 
 The custom attributes associated to the service (defaults to empty map).
-| ``Map<String,String>``
+| `java.lang.String`
 | 
 |===
 
