Remove broken link that causes website to fail

--- a/docs/modules/ROOT/pages/reference/extensions/rest-openapi.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/rest-openapi.adoc
@@ -126,7 +126,7 @@ When running in the native mode, the contract files must be specified the `quark
 quarkus.native.resources.includes=contract.json
 ----
 
-Please refer to https://camel.apache.org/manual/rest-dsl-openapi.html#_contract_first[Camel Rest DSL Contract First] for more details.
+Please refer to Camel Rest DSL Contract First documentation for more details.
 
 
 [id="extensions-rest-openapi-additional-camel-quarkus-configuration"]
